# partaj

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENCE  Makefile  Procfile  README.md  cron.json  docker-compose.yml  partaj-gunicorn.py  requirements.py  requirements.txt  setup.cfg  setup.py  yoyo.html
docs/: CI.md  (+1 more)
src/backend/: .pylintrc  cron.json  manage.py  setup.cfg  setup.py
src/backend/partaj/: __init__.py  middleware.py  settings.py  urls.py  wsgi.py
src/backend/partaj/core/: admin.py  api.py  apps.py  context_processors.py  elasticsearch.py  email.py  factories.py  forms.py  index_manager.py  models.py  receivers.py  serializers.py  signals.py  storage.py  transform_prosemirror_pdf.py  transform_prosemirror_text.py  urls.py  views.py
src/backend/partaj/core/api/: __init__.py  common.py  featureflag.py  helpers.py  note.py  note_lite.py  permissions.py  referral.py  referral_activity.py  referral_answer.py  referral_answer_attachment.py  referral_answer_validation_request.py  referral_attachment.py  referral_lite.py  referral_message.py  referral_relationship.py  referral_report.py  referral_report_appendix.py  referral_report_version.py  referral_urgency.py  report_event.py  report_message.py  scan.py  task.py  topic.py  topic_lite.py  unit.py  unit_lite.py  unit_membership.py  urgency.py  user.py
src/backend/partaj/core/fields/: __init__.py
src/backend/partaj/core/indexers/: __init__.py  common.py  notes.py  referrals.py  topics.py  units.py  users.py
src/backend/partaj/core/migrations/: 0001_initial.py  0002_createsuperuser.py  0002_link_user_and_referral.py  0003_add_referral_attachments.py  0003_make_phone_and_email_optional_on_referral.py  0004_add_topics_and_units.py  0004_update_referral_attachments_name.py  0005_link_referral_to_topic.py  0005_update_referral_for_initial_beta.py  0006_add_users_to_unit.py  0006_remove_length_limit_on_referral_question.py  0007_make_unitmemberships_unique.py  0008_add_referral_assignments.py  0010_remove_referral_assignments.py  0012_remove_subject_field_from_referral.py  0013_add_assignments_on_referral.py  0014_use_django_fsm_for_referral_state.py  0015_add_referral_answer.py  0016_add_referral_activity.py  0017_create_existing_referral_activities.py  0018_name_referral_attachments_inverse_relation.py  0019_update_models_for_unassign.py  0020_remove_legacy_requested_fields_on_referral.py  0021_make_referral_user_and_topic_required.py  0022_update_table_names_for_activity_and_answer.py  0023_add_referral_answer_attachment_with_base_class.py  0024_add_urgency_model.py  0027_add_state_field_to_referralanswer.py  0028_link_draft_published_answers.py  0029_enable_answer_validations.py  0030_add_answer_validation_responses.py  0034_remove_legacy_referralanswer_attachment_relation.py  0037_add_topic_hiearchy.py  0040_create_manytomany_referrals_units.py  0041_create_unit_referral_relations_for_existing_referrals.py  0042_add_referralactivity_verbs.py  0043_add_referral_message_model.py  0046_update_existing_referrals_states.py  0047_fix_existing_published_answers.py  0049_add_manytomany_referral_user.py  (+54 more)
src/backend/partaj/core/models/: __init__.py  attachment.py  featureflag.py  notification.py  referral.py  referral_activity.py  referral_answer.py  referral_group.py  referral_message.py  referral_note.py  referral_relationship.py  referral_reminder.py  referral_reopened_history.py  referral_report.py  referral_report_appendix.py  referral_report_publishment.py  referral_report_version.py  referral_satisfaction.py  referral_subquestion_history.py  referral_subtitle_history.py  referral_topic_history.py  referral_urgency.py  referral_urgencylevel_history.py  referral_userlink.py  report_event.py  report_event_metadata.py  report_message.py  subreferral_confirmed_history.py  token.py  unit.py
src/backend/partaj/core/requests/: note_api_request.py  token_auth.py
src/backend/partaj/core/services/: __init__.py  feature_flag.py  file_handler.py  mappers.py  service_handler.py
src/backend/partaj/core/views/: __init__.py  api.py  common.py  requester.py  stats.py  unit.py
src/backend/partaj/static/css/: styles.css
src/backend/partaj/users/: admin.py  apps.py  auth.py  middleware.py  models.py  serializers.py  signals.py
src/backend/partaj/users/migrations/: 0001_initial.py  0002_createsuperuser.py  0003_rename_unit_field_on_user.py  0004_user_is_tester.py  0006_usermapping.py  0007_clear_invalid_sessions.py
src/backend/tests/partaj/core/: test_api_referral.py  test_api_referral_add_observer.py  test_api_referral_add_requester.py  test_api_referral_assign.py  test_api_referral_assign_unit.py  test_api_referral_authorization.py  test_api_referral_change_urgencylevel.py  test_api_referral_close.py  test_api_referral_invite.py  test_api_referral_perform_answer_validation.py  test_api_referral_publish_answer.py  test_api_referral_remove_attachment.py  test_api_referral_remove_observer.py  test_api_referral_remove_requester.py  test_api_referral_reopen.py  test_api_referral_request_answer_validation.py  test_api_referral_satisfaction_survey.py  test_api_referral_send.py  test_api_referral_unassign.py  test_api_referral_unassign_unit.py  test_api_referral_update_status.py  test_api_referral_update_title.py  test_api_referralactivity.py  (+34 more)
(+405660 files in other folders)
