[metadata]
name = partaj
version = 0.1.0
description = Manage and drive internal advice activity
long_description = file:README.md
long_description_content_type = text/markdown
author = Ministères de la Transition écologique et solidaire & Cohésion des territoires
author_email = mehdi.benadda@beta.gouv.fr
url = https://github.com/MTES-MCT/partaj
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Framework :: Django
    Framework :: Django :: 2.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    video
    open-edx
    accessibility
    a11y
requires-python = >=3.6

[options]
include_package_data = True
install_requires =
    boto3==1.12.8
    Brotli==1.0.7
    django==3.0.5
    djangorestframework==3.11.0
    django-cas-mb==5.0.1
    django-configurations==2.2
    django-extensions==2.2.8
    django-fsm==2.7.0
    django-impersonate==1.5
    django-phonenumber-field==4.0.0
    django-storages==1.9.1
    dockerflow==2019.10.0
    gunicorn==19.9.0
    phonenumbers==8.11.5
    psycopg2-binary==2.8.4
    requests==2.23.0
    sentry-sdk==0.17.3
    whitenoise==5.0.1
packages = find:
package_dir =
    =.
zip_safe = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    # the ones provided with django are made unusable by django-configurations
    django-admin = configurations.management:execute_from_command_line
    django-admin.py = configurations.management:execute_from_command_line

[options.extras_require]
dev =
    black==19.10b0
    dj-inmemorystorage==2.1.0
    factory-boy==2.12.0
    flake8==3.7.9
    isort==4.3.21
    pylint==2.4.3
    pylint-django==2.0.12
    pytest==5.4.1
    pytest-django==3.9.0
    wheel==0.33.6

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    dist,
    docs,
    manage.py,
    venv,
    __pycache__,
    *.egg-info,
    */migrations/*,
    stubs.py,

[pycodestyle]
max-line-length = 99

[isort]
known_django=django
known_partaj=partaj
include_trailing_comma=True
line_length=99
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,PARTAJ,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
python_files =
    test_*.py
    tests.py
testpaths =
    tests
