[metadata]
name = partaj
version = 0.1.0
description = Manage and drive internal advice activity
long_description = file:README.md
long_description_content_type = text/markdown
author = Ministères de la Transition écologique et solidaire & Cohésion des territoires
author_email = adrien.jezegou@beta.gouv.fr
url = https://github.com/MTES-MCT/partaj
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Framework :: Django
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
keywords =
    video
    open-edx
    accessibility
    a11y
requires-python = >=3.10

[options]
include_package_data = True
install_requires =
    arrow==0.17.0
    boto3>=1.26.0
    Brotli>=1.0.9
    django>=4.2,<5.0
    djangorestframework>=3.14.0
    django-cas-ng>=5.0.0
    django-configurations>=2.4.1
    django-extensions>=3.2.0
    django-fsm>=2.8.0
    django-impersonate>=1.9.0
    django-ipware>=7.0.1
    django-phonenumber-field>=7.0.0
    django-storages>=1.13.0
    dj-database-url>=2.0.0
    elasticsearch>=7.17.0,<8.0
    dockerflow>=2022.8.0
    gunicorn>=21.0.0
    phonenumbers>=8.13.0
    psycopg2-binary>=2.9.6
    requests>=2.28.0
    sentry-sdk>=1.14.0
    whitenoise>=6.4.0
    python-docx>=0.8.11
    fpdf2>=2.6.1
    mammoth>=1.5.0
    pdfminer.six
    python-slugify>=8.0.0

packages = find:
package_dir =
    =.
zip_safe = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    # the ones provided with django are made unusable by django-configurations
    django-admin = configurations.management:execute_from_command_line
    django-admin.py = configurations.management:execute_from_command_line

[options.extras_require]
dev =
    black>=22.3.0
    dj-inmemorystorage>=2.1.0
    factory-boy>=3.2.0
    flake8>=6.0.0
    isort>=5.12.0
    pylint>=2.17.0
    pylint-django>=2.5.0
    pytest>=7.0.0
    pytest-django>=4.5.0
    wheel>=0.40.0
    importlib-metadata>=4.13.0

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 999
exclude =
    .git,
    .venv,
    build,
    dist,
    docs,
    manage.py,
    venv,
    __pycache__,
    *.egg-info,
    */migrations/*,
    stubs.py,
extend-ignore = E203

[pycodestyle]
max-line-length = 99

[isort]
known_django=django
known_partaj=partaj
include_trailing_comma=True
line_length=99
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,PARTAJ,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
python_files =
    test_*.py
    tests.py
testpaths =
    tests
